--- a/custom-diff/applications/external-helm-app.yml
+++ b/custom-diff/applications/external-helm-app.yml
@@ -21,4 +21,9 @@ spec:
   syncPolicy:
     syncOptions:
       - CreateNamespace=true  
+  ignoreDifferences:
+  - group: ""
+    kind: Secrets
+    jsonPointers:
+    - /stringData
    
